Reinit avr folder content

--- a/avr/Release/Makefile
+++ b/avr/Release/Makefile
@@ -32,22 +32,23 @@ OUTPUT_FILE_DEP:=
 # Every subdirectory with source files must be described here
 SUBDIRS :=  \
 ../lib \
+../lib/dht \
+../lib/bmp085 \
+../lib/i2chw \
+../lib/i2c_gps \
 ../lib/adc \
-../lib/lcd \
-../lib/1wire \
-../lib/sht11 \
 ../lib/uart
 
 
 # Add inputs and outputs from these tool invocations to the build variables 
 C_SRCS +=  \
-../balon_udara.c \
-../lib/1wire/crc8.c \
-../lib/1wire/ds18x20.c \
-../lib/1wire/onewire.c \
-../lib/sht11/sht11.c \
-../lib/sht11/sht11_io.c \
-../lib/uart/usart_lib.c
+../kombat2014_1.c \
+../lib/adc/adc.c \
+../lib/bmp085/bmp085.c \
+../lib/dht/dht.c \
+../lib/i2chw/twimaster.c \
+../lib/i2c_gps/i2c_gps.c \
+../lib/uart/uart.c
 
 
 PREPROCESSING_SRCS += 
@@ -57,48 +58,48 @@ ASM_SRCS +=
 
 
 OBJS +=  \
-balon_udara.o \
-lib/1wire/crc8.o \
-lib/1wire/ds18x20.o \
-lib/1wire/onewire.o \
-lib/sht11/sht11.o \
-lib/sht11/sht11_io.o \
-lib/uart/usart_lib.o
+kombat2014_1.o \
+lib/adc/adc.o \
+lib/bmp085/bmp085.o \
+lib/dht/dht.o \
+lib/i2chw/twimaster.o \
+lib/i2c_gps/i2c_gps.o \
+lib/uart/uart.o
 
 
 OBJS_AS_ARGS +=  \
-balon_udara.o \
-lib/1wire/crc8.o \
-lib/1wire/ds18x20.o \
-lib/1wire/onewire.o \
-lib/sht11/sht11.o \
-lib/sht11/sht11_io.o \
-lib/uart/usart_lib.o
+kombat2014_1.o \
+lib/adc/adc.o \
+lib/bmp085/bmp085.o \
+lib/dht/dht.o \
+lib/i2chw/twimaster.o \
+lib/i2c_gps/i2c_gps.o \
+lib/uart/uart.o
 
 
 C_DEPS +=  \
-balon_udara.d \
-lib/1wire/crc8.d \
-lib/1wire/ds18x20.d \
-lib/1wire/onewire.d \
-lib/sht11/sht11.d \
-lib/sht11/sht11_io.d \
-lib/uart/usart_lib.d
+kombat2014_1.d \
+lib/adc/adc.d \
+lib/bmp085/bmp085.d \
+lib/dht/dht.d \
+lib/i2chw/twimaster.d \
+lib/i2c_gps/i2c_gps.d \
+lib/uart/uart.d
 
 
 C_DEPS_AS_ARGS +=  \
-balon_udara.d \
-lib/1wire/crc8.d \
-lib/1wire/ds18x20.d \
-lib/1wire/onewire.d \
-lib/sht11/sht11.d \
-lib/sht11/sht11_io.d \
-lib/uart/usart_lib.d
+kombat2014_1.d \
+lib/adc/adc.d \
+lib/bmp085/bmp085.d \
+lib/dht/dht.d \
+lib/i2chw/twimaster.d \
+lib/i2c_gps/i2c_gps.d \
+lib/uart/uart.d
 
 
-OUTPUT_FILE_PATH +=balon_udara.elf
+OUTPUT_FILE_PATH +=kombat2014_1.elf
 
-OUTPUT_FILE_PATH_AS_ARGS +=balon_udara.elf
+OUTPUT_FILE_PATH_AS_ARGS +=kombat2014_1.elf
 
 ADDITIONAL_DEPENDENCIES:=
 
@@ -123,25 +124,43 @@ OUTPUT_FILE_DEP:= ./makedep.mk
 ./%.o: .././%.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : (AVR_8_bit_GNU_Toolchain_3.4.0_663) 4.6.2
-	$(QUOTE)C:\Program Files\Atmel\Atmel Studio 6.0\extensions\Atmel\AVRGCC\3.4.0.65\AVRToolchain\bin\avr-gcc.exe$(QUOTE) -funsigned-char -funsigned-bitfields -DF_CPU=11059200UL  -Os -ffunction-sections -fpack-struct -fshort-enums -Wall -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"  -mmcu=atmega32   -o"$@" "$<" 
+	$(QUOTE)C:\Program Files\Atmel\Atmel Studio 6.0\extensions\Atmel\AVRGCC\3.4.0.65\AVRToolchain\bin\avr-gcc.exe$(QUOTE) -funsigned-char -funsigned-bitfields -DF_CPU=11059200UL  -I"../lib/bmp085" -I"../lib/dht" -I"../lib/i2chw" -I"../lib/uart" -I"../lib/i2c_gps" -I"../lib/adc"  -Os -ffunction-sections -fpack-struct -fshort-enums -Wall -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"  -mmcu=atmega8   -o"$@" "$<" 
 	@echo Finished building: $<
 
-lib/1wire/%.o: ../lib/1wire/%.c
+lib/adc/%.o: ../lib/adc/%.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : (AVR_8_bit_GNU_Toolchain_3.4.0_663) 4.6.2
-	$(QUOTE)C:\Program Files\Atmel\Atmel Studio 6.0\extensions\Atmel\AVRGCC\3.4.0.65\AVRToolchain\bin\avr-gcc.exe$(QUOTE) -funsigned-char -funsigned-bitfields -DF_CPU=11059200UL  -Os -ffunction-sections -fpack-struct -fshort-enums -Wall -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"  -mmcu=atmega32   -o"$@" "$<" 
+	$(QUOTE)C:\Program Files\Atmel\Atmel Studio 6.0\extensions\Atmel\AVRGCC\3.4.0.65\AVRToolchain\bin\avr-gcc.exe$(QUOTE) -funsigned-char -funsigned-bitfields -DF_CPU=11059200UL  -I"../lib/bmp085" -I"../lib/dht" -I"../lib/i2chw" -I"../lib/uart" -I"../lib/i2c_gps" -I"../lib/adc"  -Os -ffunction-sections -fpack-struct -fshort-enums -Wall -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"  -mmcu=atmega8   -o"$@" "$<" 
 	@echo Finished building: $<
 
-lib/sht11/%.o: ../lib/sht11/%.c
+lib/bmp085/%.o: ../lib/bmp085/%.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : (AVR_8_bit_GNU_Toolchain_3.4.0_663) 4.6.2
-	$(QUOTE)C:\Program Files\Atmel\Atmel Studio 6.0\extensions\Atmel\AVRGCC\3.4.0.65\AVRToolchain\bin\avr-gcc.exe$(QUOTE) -funsigned-char -funsigned-bitfields -DF_CPU=11059200UL  -Os -ffunction-sections -fpack-struct -fshort-enums -Wall -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"  -mmcu=atmega32   -o"$@" "$<" 
+	$(QUOTE)C:\Program Files\Atmel\Atmel Studio 6.0\extensions\Atmel\AVRGCC\3.4.0.65\AVRToolchain\bin\avr-gcc.exe$(QUOTE) -funsigned-char -funsigned-bitfields -DF_CPU=11059200UL  -I"../lib/bmp085" -I"../lib/dht" -I"../lib/i2chw" -I"../lib/uart" -I"../lib/i2c_gps" -I"../lib/adc"  -Os -ffunction-sections -fpack-struct -fshort-enums -Wall -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"  -mmcu=atmega8   -o"$@" "$<" 
+	@echo Finished building: $<
+
+lib/dht/%.o: ../lib/dht/%.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : (AVR_8_bit_GNU_Toolchain_3.4.0_663) 4.6.2
+	$(QUOTE)C:\Program Files\Atmel\Atmel Studio 6.0\extensions\Atmel\AVRGCC\3.4.0.65\AVRToolchain\bin\avr-gcc.exe$(QUOTE) -funsigned-char -funsigned-bitfields -DF_CPU=11059200UL  -I"../lib/bmp085" -I"../lib/dht" -I"../lib/i2chw" -I"../lib/uart" -I"../lib/i2c_gps" -I"../lib/adc"  -Os -ffunction-sections -fpack-struct -fshort-enums -Wall -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"  -mmcu=atmega8   -o"$@" "$<" 
+	@echo Finished building: $<
+
+lib/i2chw/%.o: ../lib/i2chw/%.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : (AVR_8_bit_GNU_Toolchain_3.4.0_663) 4.6.2
+	$(QUOTE)C:\Program Files\Atmel\Atmel Studio 6.0\extensions\Atmel\AVRGCC\3.4.0.65\AVRToolchain\bin\avr-gcc.exe$(QUOTE) -funsigned-char -funsigned-bitfields -DF_CPU=11059200UL  -I"../lib/bmp085" -I"../lib/dht" -I"../lib/i2chw" -I"../lib/uart" -I"../lib/i2c_gps" -I"../lib/adc"  -Os -ffunction-sections -fpack-struct -fshort-enums -Wall -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"  -mmcu=atmega8   -o"$@" "$<" 
+	@echo Finished building: $<
+
+lib/i2c_gps/%.o: ../lib/i2c_gps/%.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : (AVR_8_bit_GNU_Toolchain_3.4.0_663) 4.6.2
+	$(QUOTE)C:\Program Files\Atmel\Atmel Studio 6.0\extensions\Atmel\AVRGCC\3.4.0.65\AVRToolchain\bin\avr-gcc.exe$(QUOTE) -funsigned-char -funsigned-bitfields -DF_CPU=11059200UL  -I"../lib/bmp085" -I"../lib/dht" -I"../lib/i2chw" -I"../lib/uart" -I"../lib/i2c_gps" -I"../lib/adc"  -Os -ffunction-sections -fpack-struct -fshort-enums -Wall -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"  -mmcu=atmega8   -o"$@" "$<" 
 	@echo Finished building: $<
 
 lib/uart/%.o: ../lib/uart/%.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : (AVR_8_bit_GNU_Toolchain_3.4.0_663) 4.6.2
-	$(QUOTE)C:\Program Files\Atmel\Atmel Studio 6.0\extensions\Atmel\AVRGCC\3.4.0.65\AVRToolchain\bin\avr-gcc.exe$(QUOTE) -funsigned-char -funsigned-bitfields -DF_CPU=11059200UL  -Os -ffunction-sections -fpack-struct -fshort-enums -Wall -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"  -mmcu=atmega32   -o"$@" "$<" 
+	$(QUOTE)C:\Program Files\Atmel\Atmel Studio 6.0\extensions\Atmel\AVRGCC\3.4.0.65\AVRToolchain\bin\avr-gcc.exe$(QUOTE) -funsigned-char -funsigned-bitfields -DF_CPU=11059200UL  -I"../lib/bmp085" -I"../lib/dht" -I"../lib/i2chw" -I"../lib/uart" -I"../lib/i2c_gps" -I"../lib/adc"  -Os -ffunction-sections -fpack-struct -fshort-enums -Wall -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"  -mmcu=atmega8   -o"$@" "$<" 
 	@echo Finished building: $<
 
 
@@ -169,12 +188,12 @@ all: $(OUTPUT_FILE_PATH) $(ADDITIONAL_DEPENDENCIES)
 $(OUTPUT_FILE_PATH): $(OBJS) $(USER_OBJS) $(OUTPUT_FILE_DEP)
 	@echo Building target: $@
 	@echo Invoking: AVR/GNU Linker : (AVR_8_bit_GNU_Toolchain_3.4.0_663) 4.6.2
-	$(QUOTE)C:\Program Files\Atmel\Atmel Studio 6.0\extensions\Atmel\AVRGCC\3.4.0.65\AVRToolchain\bin\avr-gcc.exe$(QUOTE) -o$(OUTPUT_FILE_PATH_AS_ARGS) $(OBJS_AS_ARGS) $(USER_OBJS) $(LIBS) -Wl,-Map="balon_udara.map" -Wl,-u,vfprintf -Wl,--start-group -Wl,-lm -Wl,-lprintf_flt  -Wl,--end-group -Wl,--gc-sections  -mmcu=atmega32  
+	$(QUOTE)C:\Program Files\Atmel\Atmel Studio 6.0\extensions\Atmel\AVRGCC\3.4.0.65\AVRToolchain\bin\avr-gcc.exe$(QUOTE) -o$(OUTPUT_FILE_PATH_AS_ARGS) $(OBJS_AS_ARGS) $(USER_OBJS) $(LIBS) -Wl,-Map="kombat2014_1.map" -Wl,--start-group -Wl,-lm  -Wl,--end-group -Wl,--gc-sections  -mmcu=atmega8  
 	@echo Finished building target: $@
-	"C:\Program Files\Atmel\Atmel Studio 6.0\extensions\Atmel\AVRGCC\3.4.0.65\AVRToolchain\bin\avr-objcopy.exe" -O ihex -R .eeprom -R .fuse -R .lock -R .signature  "balon_udara.elf" "balon_udara.hex"
-	"C:\Program Files\Atmel\Atmel Studio 6.0\extensions\Atmel\AVRGCC\3.4.0.65\AVRToolchain\bin\avr-objcopy.exe" -j .eeprom  --set-section-flags=.eeprom=alloc,load --change-section-lma .eeprom=0  --no-change-warnings -O ihex "balon_udara.elf" "balon_udara.eep" || exit 0
-	"C:\Program Files\Atmel\Atmel Studio 6.0\extensions\Atmel\AVRGCC\3.4.0.65\AVRToolchain\bin\avr-objdump.exe" -h -S "balon_udara.elf" > "balon_udara.lss"
-	"C:\Program Files\Atmel\Atmel Studio 6.0\extensions\Atmel\AVRGCC\3.4.0.65\AVRToolchain\bin\avr-size.exe" "balon_udara.elf"
+	"C:\Program Files\Atmel\Atmel Studio 6.0\extensions\Atmel\AVRGCC\3.4.0.65\AVRToolchain\bin\avr-objcopy.exe" -O ihex -R .eeprom -R .fuse -R .lock -R .signature  "kombat2014_1.elf" "kombat2014_1.hex"
+	"C:\Program Files\Atmel\Atmel Studio 6.0\extensions\Atmel\AVRGCC\3.4.0.65\AVRToolchain\bin\avr-objcopy.exe" -j .eeprom  --set-section-flags=.eeprom=alloc,load --change-section-lma .eeprom=0  --no-change-warnings -O ihex "kombat2014_1.elf" "kombat2014_1.eep" || exit 0
+	"C:\Program Files\Atmel\Atmel Studio 6.0\extensions\Atmel\AVRGCC\3.4.0.65\AVRToolchain\bin\avr-objdump.exe" -h -S "kombat2014_1.elf" > "kombat2014_1.lss"
+	"C:\Program Files\Atmel\Atmel Studio 6.0\extensions\Atmel\AVRGCC\3.4.0.65\AVRToolchain\bin\avr-size.exe" "kombat2014_1.elf"
 	
 
 
@@ -184,5 +203,5 @@ $(OUTPUT_FILE_PATH): $(OBJS) $(USER_OBJS) $(OUTPUT_FILE_DEP)
 # Other Targets
 clean:
 	-$(RM) $(OBJS_AS_ARGS)$(C_DEPS_AS_ARGS) $(EXECUTABLES) 
-	rm -rf "balon_udara.elf" "balon_udara.a" "balon_udara.hex" "balon_udara.lss" "balon_udara.eep" "balon_udara.map"
+	rm -rf "kombat2014_1.elf" "kombat2014_1.a" "kombat2014_1.hex" "kombat2014_1.lss" "kombat2014_1.eep" "kombat2014_1.map"
 	
